--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
@@ -24,8 +24,35 @@
                             <c:RRLink class="study-title" label="{!v.currentStudy.trial.Study_Code_Name__c}"
                                       page="{!'study-workspace?id=' + v.currentStudy.trial.Id}"/>
                         </div>
-                    <!--Social Widgets-->
-                        <div class="slds-col slds-medium-size_2-of-12 slds-size_1-of-3 slds-order_3 slds-medium-order_2 rri-icon">
+
+                        <!--Social Widgets-->
+                        <aura:if isTrue="{!v.userMode == 'HCP'}">
+                            <div class="rri-icon">
+                                <a href="javascript:void(0);" target="_blank" onclick="{!c.onEmailClick}">
+                                    <span class="slds-m-around_x-small">
+                                        <c:RRIcon iconName="icon-mailbox" id="icon-mailbox" color="#297DFD"/>
+                                    </span>
+                                </a>
+                                <a href="javascript:void(0);" target="_blank" onclick="{!c.onFacebookClick}">
+                                    <span class="slds-m-around_x-small">
+                                        <c:RRIcon iconName="icon-facebook" id="icon-facebook" color="#297DFD"/>
+                                    </span>
+                                </a>
+                                <a href="javascript:void(0);" target="_blank" onclick="{!c.onTwitterClick}">
+                                    <span class="slds-m-around_x-small">
+                                        <c:RRIcon iconName="icon-twitter" id="icon-twitter" color="#297DFD"/>
+                                    </span>
+                                </a>
+                                <a href="javascript:void(0);" target="_blank" onclick="{!c.onLinkedInClick}">
+                                    <span class="slds-m-around_x-small">
+                                        <c:RRIcon iconName="icon-linkedin" id="icon-linkedin" color="#297DFD"/>
+                                    </span>
+                                </a>
+                            </div>
+                        </aura:if>
+
+                        <!--Social Widgets-->
+                        <!--div class="slds-col slds-medium-size_2-of-12 slds-size_1-of-3 slds-order_3 slds-medium-order_2 rri-icon">
                             <a href="https://www.google.com" target="_blank">
                                 <span class="slds-m-around_x-small">
                                     <c:RRIcon iconName="icon-mailbox" id="icon-mailbox" color="#297DFD"/>
@@ -46,35 +73,10 @@
                                     <c:RRIcon iconName="icon-linkedin" id="icon-linkedin" color="#297DFD"/>
                                 </span>
                             </a>
-                        </div>
+                        </div-->
                         <div class="slds-col slds-size_2-of-3 slds-order_2 slds-medium-order_3 sponsor-name">{!v.currentStudy.trial.Study_Sponsor__c}</div>
-                </div>
 
-                <!--Social Widgets-->
-                <!--aura:if isTrue="{!v.userMode == 'HCP'}">
-                    <div class="rri-icon">
-                        <a href="javascript:void(0);" target="_blank" onclick="{!c.onEmailClick}">
-                            <span class="slds-m-around_x-small">
-                                <c:RRIcon iconName="icon-mailbox" id="icon-mailbox" color="#297DFD"/>
-                            </span>
-                        </a>
-                        <a href="javascript:void(0);" target="_blank" onclick="{!c.onFacebookClick}">
-                            <span class="slds-m-around_x-small">
-                                <c:RRIcon iconName="icon-facebook" id="icon-facebook" color="#297DFD"/>
-                            </span>
-                        </a>
-                        <a href="javascript:void(0);" target="_blank" onclick="{!c.onTwitterClick}">
-                            <span class="slds-m-around_x-small">
-                                <c:RRIcon iconName="icon-twitter" id="icon-twitter" color="#297DFD"/>
-                            </span>
-                        </a>
-                        <a href="javascript:void(0);" target="_blank" onclick="{!c.onLinkedInClick}">
-                            <span class="slds-m-around_x-small">
-                                <c:RRIcon iconName="icon-linkedin" id="icon-linkedin" color="#297DFD"/>
-                            </span>
-                        </a>
                     </div>
-                </aura:if-->
 
                 </div>
                 <div class="slvi-objective-section">
