--- a/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
+++ b/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
@@ -107,8 +107,8 @@
                     </aura:if>
 
                     <div class="vpi-field">
-                        <div class="label">{!$Label.c.PE_Referral_Id}</div>
-                        <div class="value">{!v.pe.Name}</div>
+                        <div class="label">{!$Label.c.PE_Investigator_Recruitment_Expert}</div>
+                        <div class="value">{!v.pe.Study_Site__r.Principal_Investigator__r.Name}</div>
                     </div>
 
                     <div class="vpi-field">
@@ -177,6 +177,10 @@
                     </div>
                     <div class="{!'collapse-section ' + if(v.detailCollapsed, '', ' opened')}">
                         <c:RRCollapse label="{!$Label.c.PE_Details}" isCollapsed="{!v.detailCollapsed}">
+                            <div class="vpi-field">
+                                <div class="label">{!$Label.c.PE_Referral_Id}</div>
+                                <div class="value">{!v.pe.Name}</div>
+                            </div>
                             <c:PatientStatusPathDetail aura:id="statusDetail" pathItems="{!v.pathItems}" peId="{!v.pe.Id}"/>
                         </c:RRCollapse>
                     </div>
