--- a/force-app/main/default/aura/SearchConditionsOfInterest/SearchConditionsOfInterest.cmp
+++ b/force-app/main/default/aura/SearchConditionsOfInterest/SearchConditionsOfInterest.cmp
@@ -1,17 +1,54 @@
-<aura:component description="SearchConditionsOfInterest">
+<aura:component description="SearchConditionsOfInterest" controller="SearchConditionsOfInterestRemote">
     <aura:attribute name="searchCriterias" type="String[]"/>
-    <aura:attribute name="originalItems" type="Object[]" default="" />
-    <aura:attribute name="displayedItems" type="ConditionOfInterestRemote.CAWrapper[]" default="" />
-    <aura:attribute name="displayFooter" type="Boolean" default="" />
-    <aura:attribute name="bypass" type="Boolean" default="" />
-
+    <aura:attribute name="originalItems" type="Object[]" default=""/>
+    <aura:attribute name="displayedItems" type="List" default=""/>
+    <aura:attribute name="therapeuticAreas" type="Therapeutic_Area__c[]" default="[]"/>
+    <aura:attribute name="displayFooter" type="Boolean" default=""/>
+    <aura:attribute name="bypass" type="Boolean" default=""/>
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
-
 
 
     <!--<aura:registerEvent name="setDefaultPage" type="c.setDefaultPage"/>-->
 
-    <c:Popup aura:id="searchModal" title="Add Condition of Interest" size="medium" showFooter="{!v.displayFooter}">
-        <lightning:input onchange="{!c.bulkSearch}" type="search" label="Search" name="search" />
+    <c:Popup aura:id="searchModal" title="Select Your Conditions of Interest" size="medium" showClose="false" primaryButtonLabel="Save">
+
+        <lightning:input onchange="{!c.bulkSearch}" type="search" name="search" label="" variant="label-hidden" placeholder="Search for Condition"/>
+
+        <div class="alert-count-condition">
+            You may only select to 5 conditions at any time.
+        </div>
+        <table aria-multiselectable="true"
+               class="slds-table slds-table_header-hidden slds-table_bordered slds-table_edit slds-tree slds-table_tree"
+               role="treegrid">
+            <tbody>
+            <!--<aura:iteration items="{!v.therapeuticAreas}" var="ta">-->
+            <!--<tr aria-level="1" aria-posinset="1" aria-selected="false" aria-setsize="4" class="slds-hint-parent"-->
+            <!--tabindex="0">-->
+            <!--<td class="slds-text-align_right" role="gridcell" style="width: 3.25rem;">-->
+            <!--<div class="slds-checkbox">-->
+            <!--&lt;!&ndash;<lightning:input label="" type="checkbox" checked="true"/>&ndash;&gt;-->
+            <!--</div>-->
+            <!--</td>-->
+            <!--<th class="slds-tree__item" data-label="Account Name" scope="row">-->
+            <!--<div class="slds-truncate" title="Rewis Inc">{!ta.Name}</div>-->
+            <!--</th>-->
+            <!--</tr>-->
+            <!--</aura:iteration>-->
+
+            <aura:iteration items="{!v.displayedItems}" var="ta">
+                <tr aria-level="1" aria-posinset="1" aria-selected="false" aria-setsize="4" class="slds-hint-parent"
+                    tabindex="0">
+                    <td class="slds-text-align_right" role="gridcell" style="width: 3.25rem;">
+                        <div class="slds-checkbox">
+                            <lightning:input label="" type="checkbox" checked="{!ta.isSelected}"  value="{!ta}" onchange="{!c.handleChange}"/>
+                        </div>
+                    </td>
+                    <th class="slds-tree__item" data-label="Account Name" scope="row">
+                        <div class="slds-truncate" title="Rewis Inc">{!ta.therArea.Name}</div>
+                    </th>
+                </tr>
+            </aura:iteration>
+            </tbody>
+        </table>
     </c:Popup>
 </aura:component>
